--- a/templates/login.html
+++ b/templates/login.html
@@ -11,12 +11,12 @@
 	<body>
 		<div class="container">
 
-			<form class="form-signin">
+			<form action="/scripts/actions/login.php" class="form-signin" method="post">
 				<h2 class="form-signin-heading">Please sign in</h2>
 				<label for="inputEmail" class="sr-only">Email address</label>
-				<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+				<input type="email" name="email_name" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 				<label for="inputPassword" class="sr-only">Password</label>
-				<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+				<input type="password" name="password_name" id="inputPassword" class="form-control" placeholder="Password" required>
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" value="remember-me"> Remember me
