modified index for cleaner logic and to allow access to signup page; changed redirect in login action to go to main page or back to login page; added in links to signup/login pages for login/signup respectively

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,8 +11,12 @@
 	<body>
 		<div class="container">
 
+			<div style="text-align:right">
+				<h4><a href="/signup">Sign up</a></h4>
+			</div>
+
 			<form action="/scripts/actions/login.php" class="form-signin" method="post">
-				<h2 class="form-signin-heading">Please sign in</h2>
+				<h2 class="form-signin-heading">Please Sign In</h2>
 				<label for="inputEmail" class="sr-only">Email address</label>
 				<input type="email" name="email_name" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 				<label for="inputPassword" class="sr-only">Password</label>
