--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,6 +13,10 @@
 	<body>
 		<div class="container">
 
+			<div style="text-align:right">
+				<h4><a href="/login">Sign In</a></h4>
+			</div>
+
 			<form class="form-signin">
 				<h2 class="form-signin-heading">Sign Up</h2>
 				<label for="inputEmail" class="sr-only">Email address</label>
