added support for growls

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
 		<title>biss-tea</title>
 
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/assets/growl.css">
 		<link rel="stylesheet" href="styles/login.css">
 	</head>
 	<body>
@@ -31,4 +32,16 @@
 
 		</div> <!-- /container -->
 	</body>
+
+	<script type="text/javascript" src="/assets/jquery.min.js"></script>
+	<script type="text/javascript" src="/assets/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/assets/growl.js"></script>
+
+	<script type="text/javascript">
+		//growl message
+		==growl==
+	</script>
+
+
+
 </html>
