added in logic for signup (**NOTE: REQUIRES PHP5.5.  I am writin instructions to upgrade**), switched to password hash

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,7 @@
 		<title>biss-tea</title>
 
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/assets/growl.css">
 		<link rel="stylesheet" href="styles/login.css">
 	</head>
 	<body>
@@ -17,17 +18,27 @@
 				<h4><a href="/login">Sign In</a></h4>
 			</div>
 
-			<form class="form-signin">
+			<form action="/scripts/actions/signup.php" class="form-signin" method="post">
 				<h2 class="form-signin-heading">Sign Up</h2>
 				<label for="inputEmail" class="sr-only">Email address</label>
-				<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+				<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 				<label for="inputPassword" class="sr-only">Password</label>
-				<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+				<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 				<label for="inputPassword" class="sr-only">Password</label>
-				<input type="password" id="inputPassword" class="form-control last-field" placeholder="Repeat Password" required>
+				<input type="password" name="password_verify" id="inputPassword" class="form-control last-field" placeholder="Repeat Password" required>
 				<button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
 			</form>
 
 		</div> <!-- /container -->
 	</body>
+
+	<script type="text/javascript" src="/assets/jquery.min.js"></script>
+	<script type="text/javascript" src="/assets/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/assets/growl.js"></script>
+
+	<script type="text/javascript">
+		//growl message
+		==growl==
+	</script>
+
 </html>
