--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,6 +22,8 @@
 				<h2 class="form-signin-heading">Sign Up</h2>
 				<label for="inputEmail" class="sr-only">Email address</label>
 				<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+				<label for="inputUsername" class="sr-only">Username</label>
+				<input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
 				<label for="inputPassword" class="sr-only">Password</label>
 				<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 				<label for="inputPassword" class="sr-only">Password</label>
