users are now displayed on admin page.  Admin page redirects if you don't have the right permissions.  started work on ajax for changing a user's permissions

--- a/templates/privileged_access.html
+++ b/templates/privileged_access.html
@@ -1,1 +1,34 @@
-This is the Admin page.
+<h2> This is the Admin page. </h2>
+
+</br>
+
+<table class="table table-hover table-border user_table">
+	<tr>
+		<th>
+			User Name
+		</th>
+		<th>
+			Email Address
+		</th>
+		<th>
+			Admin Access
+		</th>
+	</tr>
+
+	==users==
+
+</table>
+
+<script type="text/javascript">
+	$().ready(function()
+	{
+		$(".permission_choice").click(function()
+		{
+			$.ajax(
+			{
+				post: "{user_id: "+$(this).name+"}",
+				url: "/scripts/ajax/change_permissions.php",
+			});
+		});
+	});
+</script>
